--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
     "@atlaskit/avatar": "^17.1.3",
     "@atlaskit/avatar-group": "5.0.1",
     "@atlaskit/breadcrumbs": "9.2.3",
+    "@atlaskit/checkbox": "10.1.3",
     "@atlaskit/code": "11.1.0",
     "@atlaskit/css-reset": "5.0.8",
     "@atlaskit/drawer": "^5.0.13",
     "@atlaskit/dropdown-menu": "^8.1.4",
+    "@atlaskit/dynamic-table": "13.4.0",
+    "@atlaskit/form": "6.3.1",
     "@atlaskit/global-navigation": "8.0.4",
     "@atlaskit/icon": "^19.0.8",
     "@atlaskit/logo": "^12.2.1",
@@ -19,11 +22,15 @@
     "@atlaskit/page": "11.0.9",
     "@atlaskit/page-header": "9.0.15",
     "@atlaskit/select": "10.2.2",
+    "@atlaskit/table-tree": "7.1.2",
     "@atlaskit/textfield": "3.1.2",
     "@atlaskit/theme": "^9.2.4",
+    "axios": "0.19.0",
     "react": "^16.8.0",
     "react-dom": "^16.8.0",
+    "react-dropzone": "10.1.10",
     "react-router-dom": "5.1.2",
+    "react-vis": "1.11.7",
     "styled-components": "^3.2.6"
   },
   "keywords": [],
