--- a/package.json
+++ b/package.json
@@ -13,22 +13,27 @@
     "@atlaskit/drawer": "^5.0.13",
     "@atlaskit/dropdown-menu": "^8.1.4",
     "@atlaskit/dynamic-table": "13.4.0",
+    "@atlaskit/editor-core": "115.0.0",
     "@atlaskit/form": "6.3.1",
     "@atlaskit/global-navigation": "8.0.4",
     "@atlaskit/icon": "^19.0.8",
     "@atlaskit/logo": "^12.2.1",
+    "@atlaskit/media-core": "31.0.1",
     "@atlaskit/modal-dialog": "^10.3.3",
     "@atlaskit/navigation-next": "7.0.4",
     "@atlaskit/page": "11.0.9",
     "@atlaskit/page-header": "9.0.15",
     "@atlaskit/select": "10.2.2",
     "@atlaskit/table-tree": "7.1.2",
+    "@atlaskit/textarea": "2.2.2",
     "@atlaskit/textfield": "3.1.2",
     "@atlaskit/theme": "^9.2.4",
+    "@atlaskit/user-picker": "4.1.5",
     "axios": "0.19.0",
     "react": "^16.8.0",
     "react-dom": "^16.8.0",
     "react-dropzone": "10.1.10",
+    "react-intl": "3.8.0",
     "react-router-dom": "5.1.2",
     "react-vis": "1.11.7",
     "styled-components": "^3.2.6"
