--- a/.github/workflows/react.yml
+++ b/.github/workflows/react.yml
@@ -20,6 +20,7 @@ jobs:
     - name: npm install, build, and test
       run: |
         npm -v
+        npm i react
         npm i react-scripts -g
         npm install package.json
         react-scripts build
