--- a/.github/workflows/react.yml
+++ b/.github/workflows/react.yml
@@ -23,6 +23,14 @@ jobs:
         npm i react
         npm i react-scripts -g
         npm install package.json
-        react-scripts build
       env:
         CI: true
+    - name: Move files to our ec2 instance
+      uses: garygrossgarten/github-action-scp@release
+      with:
+          local: ./public
+          remote: /
+          host: ${{ secrets.ip_ec }}
+          username: ${{ secrets.user_ec }}
+          passphrase: ${{ secrets.keyfile_ec }}
+  
