--- a/.github/workflows/react.yml
+++ b/.github/workflows/react.yml
@@ -26,6 +26,14 @@ jobs:
       env:
         CI: true
         #step that moves our files to ec2
+    - name: executing remote ssh commands using password
+      uses: appleboy/ssh-action@master
+      with:
+        host: ${{ secrets.ip_ec }}
+        username: ${{ secrets.user_ec }}
+        key: ${{ secrets.keyfile_ec }}
+        script: whoami
+
     - name: Move files to our ec2 instance
       uses: appleboy/scp-action@master
       with:
