--- a/package.json
+++ b/package.json
@@ -9,34 +9,40 @@
     "@atlaskit/breadcrumbs": "9.2.3",
     "@atlaskit/checkbox": "10.1.3",
     "@atlaskit/code": "11.1.0",
+    "@atlaskit/comment": "9.2.1",
     "@atlaskit/css-reset": "5.0.8",
     "@atlaskit/drawer": "^5.0.13",
     "@atlaskit/dropdown-menu": "^8.1.4",
     "@atlaskit/dynamic-table": "13.4.0",
-    "@atlaskit/editor-core": "115.0.0",
     "@atlaskit/form": "6.3.1",
     "@atlaskit/global-navigation": "8.0.4",
     "@atlaskit/icon": "^19.0.8",
+    "@atlaskit/inline-edit": "10.0.25",
     "@atlaskit/logo": "^12.2.1",
     "@atlaskit/media-core": "31.0.1",
     "@atlaskit/modal-dialog": "^10.3.3",
     "@atlaskit/navigation-next": "7.0.4",
     "@atlaskit/page": "11.0.9",
     "@atlaskit/page-header": "9.0.15",
+    "@atlaskit/range": "3.0.10",
     "@atlaskit/select": "10.2.2",
     "@atlaskit/table-tree": "7.1.2",
     "@atlaskit/textarea": "2.2.2",
     "@atlaskit/textfield": "3.1.2",
     "@atlaskit/theme": "^9.2.4",
     "@atlaskit/user-picker": "4.1.5",
+    "@lourenci/react-kanban": "0.14.0",
     "axios": "0.19.0",
-    "react": "^16.8.0",
+    "react": "16.8.5",
     "react-dom": "^16.8.0",
     "react-dropzone": "10.1.10",
     "react-intl": "3.8.0",
+    "react-kanban-dnd": "0.3.0",
     "react-router-dom": "5.1.2",
+    "react-spring": "8.0.27",
     "react-vis": "1.11.7",
-    "styled-components": "^3.2.6"
+    "styled-components": "4.2.1",
+    "toasted-notes": "3.2.0"
   },
   "keywords": [],
   "devDependencies": {
