--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@atlaskit/user-picker": "4.1.5",
     "@lourenci/react-kanban": "0.14.0",
     "axios": "0.19.0",
+    "jwt-decode": "2.2.0",
     "react": "16.8.5",
     "react-dom": "^16.8.0",
     "react-dropzone": "10.1.10",
@@ -41,7 +42,7 @@
     "react-router-dom": "5.1.2",
     "react-spring": "8.0.27",
     "react-vis": "1.11.7",
-    "styled-components": "4.2.1",
+    "styled-components": "3.5.0-0",
     "toasted-notes": "3.2.0"
   },
   "keywords": [],
