--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@atlaskit/range": "3.0.10",
     "@atlaskit/select": "10.2.2",
     "@atlaskit/table-tree": "7.1.2",
+    "@atlaskit/tabs": "11.2.4",
     "@atlaskit/textarea": "2.2.2",
     "@atlaskit/textfield": "3.1.2",
     "@atlaskit/theme": "^9.2.4",
